2008-02-21  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalsettingswidget.ui,
	libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/engines/surfacesettingswidget.ui: Removed the paddings
	and set step size spinners. Also removed the corresponding functions
	that set these properties.

	* libavogadro/src/engines/orbitalengine.cpp,
	libavogadro/src/engines/surfaceengine.cpp: Fixed the opacity slider
	to actually change the surface opacity. Ported to the new init
	function in IsoGen

	* libavogadro/src/engines/iso.*: Modified the IsoGen init function to
	take a PainterDevice and set the step size based up on the quality.

	* libavogadro/src/painter.h, libavogadro/src/glpainter.h,
	libavogadro/src/povpainter.h: Added quality as a new virtual function.

	* libavogadro/src/engines/iso.h,
	libavogadro/src/engines/orbitalengine.*,
	libavogadro/src/engines/surfaceengine.*,
	libavogadro/src/painterdevice.h: Tweaked include files a little so
	that IsoGen doesn't include the whole of GLWidget. Fixed others.

2008-02-19  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/engines/*, libavogadro/src/tools/*: Added
	readSettings and writeSettings for:
	Tools:
	- draw tool 		(done, dcurtis)
	- navigate tool 	(no settings)
	- bondcentric tool 	(done)
	- manipulate tool	(no settings)
	- autoopt tool		(done)
	- click measure tool	(no settings)
	Engines:
	- labelengine		(done, dcurtis)
	- RingEngine 		(done)
	- WireEngine		(done)
	- HBondEngine		(done)
	- PolygenEngine		(no settings)
	- BSDYEngine		(done)
	- StickEngine		(no settings)
	- SphereEngine		(done)


	TODO:
	- select/rotate tool
	- autorotate tool
	- OrbitalEngine		
	- SurfaceEngine
	- RibbonEngine

2008-02-19  Tim Vandermeersch  <tim.vandermeersch@gmail.com>

	* libavogadro/src/tools/draw*.*: several bugfixes for drawing while
	adjust hydrogens is on. Drawing X-C possible again. Move