@@ -1,5 +1,11 @@
 2008-02-21  Marcus D. Hanwell  <marcus@cryos.org>
 
+	* libavogadro/src/glwidget.cpp: Fixed up some of the makeCurrent and
+	doneCurrent calls - should hopefully increase stability although I
+	think threaded GL still needs some love (as well as my ATI driver!)
+
+2008-02-21  Marcus D. Hanwell  <marcus@cryos.org>
+
 	* libavogadro/src/engines/orbitalsettingswidget.ui,
 	libavogadro/src/engines/orbitalengine.*,
 	libavogadro/src/engines/surfaceengine.*,
